<resources>
    <string name="app_name">NSkyApp</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="bottom_nav_item_name">Item %1$d</string>
    <string name="bottom_nav_page_home">主页</string>
    <string name="bottom_nav_page_discover">发现</string>
    <string name="bottom_nav_page_set">设置</string>
    <string name="bottom_nav_page_4_name">Page 4</string>
    <string name="bottom_nav_page_5_name">Page 5</string>

    <string name="cat_toc_title">Material Components</string>
    <string name="cat_toc_status_wip">WIP</string>

    <string name="cat_bottomsheet_title">bottomsheet</string>
    <string name="cat_toc_buttons">Buttons</string>
    <string name="cat_buttons_title">Buttons</string>
    <string name="cat_buttons_description">
        Buttons communicate the action that will occur when the user touches them.
        They may display text, imagery, or both.
        Flat buttons and raised buttons are the most commonly used types.
    </string>
    <string name="cat_button_label_enabled">Enabled</string>
    <string name="cat_button_label_disabled">Disabled</string>
    <string name="cat_button_icon_btn_text">Icon only button</string>
    <string name="cat_btn_text">Material button</string>
    <string name="cat_unelevated_btn_text">Unelevated button</string>
    <string name="cat_text_btn_text">Text button</string>
    <string name="cat_stroked_btn_text">Stroked button</string>
    <string name="cat_icon_btn_text">Icon button</string>
    <string name="cat_icon_text_btn_text">Icon text button</string>
    <string name="cat_filled_buttons_section_title">Filled buttons</string>
    <string name="cat_outlined_btn_text">Outlined buttons</string>
    <string name="cat_outlined_icon_btn_text">Icon only buttons</string>
    <string name="cat_button_clicked">Button clicked</string>
    <string name="cat_snackbar_action_button_text">Done</string>

</resources>
