<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
            android:title="preferences_category_one">

        <android.support.v7.preference.SwitchPreferenceCompat
                android:defaultValue="true"
                android:key="pref_pref1"
                android:summary="preferences_switch_summ"
                android:title="preferences_switch_title"/>

        <android.support.v7.preference.EditTextPreference
                android:defaultValue="preferences_edittext_default"
                android:dialogLayout="@layout/pref_dialog_edittext_fix"
                android:dialogMessage="preferences_edittext_message"
                android:inputType="number"
                android:key="pref_pref2"
                android:summary="preferences_edittext_summ"
                android:title="preferences_edittext_title"/>

        <android.support.v7.preference.CheckBoxPreference
                android:defaultValue="true"
                android:key="pref_pref3"
                android:summary="preferences_checkbox_summ"
                android:title="preferences_checkbox_title"/>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
            android:title="preferences_category_two">


    </android.support.v7.preference.PreferenceCategory>

    <SwitchPreference
            android:key="example_switch"
            android:title="@string/pref_title_social_recommendations"
            android:summary="@string/pref_description_social_recommendations"
            android:defaultValue="true"/>

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
            android:key="example_text"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1"/>

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
            android:key="example_list"
            android:title="@string/pref_title_add_friends_to_messages"
            android:defaultValue="-1"
            android:entries="@array/pref_example_list_titles"
            android:entryValues="@array/pref_example_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"/>

</PreferenceScreen>
